# ailab

./: .gitignore  README.md  pyproject.toml
docs/datasets/: load_dataset.puml
examples/chatgpt/chat-gpt-lang-chain/: README.md  requirements.txt
examples/chatgpt/chat-gpt-lang-chain/src/: app.py
examples/chatgpt/chat-gpt-lang-chain/wrapper/: app.py  azure_utils.py  chat.py  langchaintest.py  polly_utils.py  wrapper.py  wrapper_once.py
src/ailab/: __init__.py
src/ailab/hub/chatgpt/chat_gpt_api_official/: README.md  requirements.txt
src/ailab/hub/huggingface/diffusers/: README.md
src/ailab/hub/huggingface/diffusers/alt_diffusion/: readme.md
src/ailab/hub/huggingface/diffusers/cycle_diffusion/: readme.md
src/ailab/hub/huggingface/diffusers/stable_diffusion/: readme.md
src/ailab/hub/huggingface/transformers/: README.md
src/ailab/hub/huggingface/transformers/automatic-speech-recognition/: README.md
src/ailab/hub/huggingface/transformers/text_classification/: README.md
src/hub/huggingface/transformers/: README.md
src/hub/huggingface/transformers/natural_language_processing/sentiment-analysis/: README.md
src/hub/huggingface/transformers/natural_language_processing/text_classification/: requirements.txt
src/hub/huggingface/transformers/object_detection/demo1/: wrapper.py
src/hub/huggingface/transformers/speech_recognition/wrapper/: wrapper.py
src/scripts/: Readme.md  download_pipeline_models.py  download_top_models.py  models_import.py  requirements.txt
src/scripts/util/: __init__.py  call_binary.py  hub_utils.py  thread_example.py
(+62 files in other folders)
